--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   
    <main>
       <section class="section-about">
-          <div class="u-center-text">
+          <div class="u-center-text u-margin-bottom-big">
             <h2 class="heading-secondary">
                Exciting Tours for Adventurous People
             </h2>
@@ -55,7 +55,11 @@
 
             </div>
             <div class="col-2">
-              Image composition
+              <div class="composition">
+                <img src="img/nat-1-large.jpg" alt="" class="composition__photo composition__photo--p1">
+                <img src="img/nat-2-large.jpg" alt="" class="composition__photo composition__photo--p2">
+                <img src="img/nat-3-large.jpg" alt="" class="composition__photo composition__photo--p3">
+              </div>
             </div>
           </div>
           
