added feature section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <!-- Place favicon.ico in the root directory -->
 <!--   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
  -->  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+ <link rel="stylesheet" type="text/css" href="css/icon-font.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -39,7 +40,7 @@
           </div>
 
           <div class="row-wrapper">
-            <div class="col-1">
+            <div class="col-1-of-2">
               <h3 class="heading-tertiary u-margin-bottom-small">You are going to fall in love with nature</h3>
               <p class="paragraph"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
               tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -54,7 +55,7 @@
               <a href="#" class="btn-text">Learn more &rarr;</a>
 
             </div>
-            <div class="col-2">
+            <div class="col-2-of-2">
               <div class="composition">
                 <img src="img/nat-1-large.jpg" alt="" class="composition__photo composition__photo--p1">
                 <img src="img/nat-2-large.jpg" alt="" class="composition__photo composition__photo--p2">
@@ -62,9 +63,52 @@
               </div>
             </div>
           </div>
-          
+      </section>
+
+      <section class="section-features">
+
+        <div class="feature-row">
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-world"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">Explore the World</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              </p>
+            </div>
+          </div>     
+           <div class="col-2-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-compass"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">Meet Nature</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              </p>
+            </div>
+          </div>     
+           <div class="col-3-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-map"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">Find your way</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              </p>
+            </div>
+          </div>     
+           <div class="col-4-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-heart"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">live a healthier life</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              </p>
+            </div>
+          </div>          
+        </div>
       </section>
   </main>
+
+
   
 
 
